[fix] error message

--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -113,6 +113,15 @@ body, html {
       }
     }
 
+    .error {
+      text-align: center;
+      background-color: #fff;
+      overflow: hidden;
+      border-radius: 1rem;
+      box-shadow: 0px 2px 10px #c0c0c0;
+      margin-top: 5rem;
+    }
+
     .post {
       background-color: #fff;
       overflow: hidden;
