--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -26,6 +26,15 @@ body, html {
       }
     }
 
+    pre {
+      background: #f5f5f5;
+      padding: 1rem;
+      margin: 2rem;
+      border-radius: 1rem;
+      text-align: left;
+      text-indent: 0;
+    }
+
     a {
       color: rgb(33, 156, 194);
       text-decoration: none;
